--- a/packages/core/index.html
+++ b/packages/core/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/src/styles.css" rel="stylesheet">
     <title>Vite + React + TS</title>
   </head>
   <body>
+    <h1 class="text-3xl font-bold underline">
+      Hello world!
+    </h1>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
