--- a/packages/editor/index.html
+++ b/packages/editor/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/styles.css" rel="stylesheet">
-    <title>Vite + React + TS</title>
+    <title>Softmaple Playground</title>
   </head>
   <body>
     <div id="root"></div>
