feat(packages/editor): added open graph meta tags.

--- a/packages/editor/index.html
+++ b/packages/editor/index.html
@@ -5,7 +5,26 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/styles.css" rel="stylesheet">
-    <title>Vite + React + TS</title>
+    <!-- HTML Meta Tags -->
+    <title>Softmaple Playground</title>
+    <meta name="description" content="Write academic papers with LaTeX-quality output in a modern WYSIWYG editor.">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://playground.softmaple.ink">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Softmaple Playground">
+    <meta property="og:description" content="Write academic papers with LaTeX-quality output in a modern WYSIWYG editor.">
+    <meta property="og:image" content="https://opengraph.b-cdn.net/production/images/81042fbb-a0bb-4798-9182-3136b7577860.png?token=bZ-vFnt2m-OhFa-a0fowx1U6zcej1aVmJrA8shpnZts&height=800&width=1200&expires=33284239252">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="playground.softmaple.ink">
+    <meta property="twitter:url" content="https://playground.softmaple.ink">
+    <meta name="twitter:title" content="Softmaple Playground">
+    <meta name="twitter:description" content="Write academic papers with LaTeX-quality output in a modern WYSIWYG editor.">
+    <meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/81042fbb-a0bb-4798-9182-3136b7577860.png?token=bZ-vFnt2m-OhFa-a0fowx1U6zcej1aVmJrA8shpnZts&height=800&width=1200&expires=33284239252">
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
   </head>
   <body>
     <div id="root"></div>
