--- a/packages/editor/index.html
+++ b/packages/editor/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/src/styles.css" rel="stylesheet">
+    <link href="../../packages/ui/src/styles/globals.css" rel="stylesheet">
     <!-- HTML Meta Tags -->
     <title>Softmaple Playground</title>
     <meta name="description" content="Write academic papers with LaTeX-quality output in a modern WYSIWYG editor.">
